--- a/.github/workflows/reproduction.yaml
+++ b/.github/workflows/reproduction.yaml
@@ -26,6 +26,6 @@ jobs:
       - name: Install Dependencies
         run: |
           jfrog rt npmc --server-id-resolve bt --server-id-deploy bt --repo-resolve npm --repo-deploy ${{ env.ARTIFACTORY_BUCKET }}
-          jfrog rt npmci
+          jfrog rt npmci --threads=1
         env:
           JFROG_CLI_BUILD_NAME: ${{ github.repository }}
